--- a/css/movie.css
+++ b/css/movie.css
@@ -1,34 +1,30 @@
-#container .left-nav{
-    height: 900px;
-}
-
-.content-details {
+/*内容区2-2 页面详情*/
+#container .content .content-details{
 	width: 95%;
 	margin: 0 auto;
+	margin-bottom: 20px;
 	padding-top: 0;
 	background-color: rgba(255, 255, 255, 0.5);
 	border-bottom: 1px dashed #666666;
 }
 
+/*设置电影简介区*/
 .content-details .left {
-	width: 38%;
+	width: 40%;
 	float: left;
-	margin: 0 auto;
+	margin: 0;
 	padding-bottom: 20px;
-	margin-left: 20px;
-}
-
-.left .left-1{
-	width: 100%;
 	line-height: 25px;
 }
 
-.movie_image-1{
+/*简介图片*/
+.left .movie_image-1{
 	width: 90%;
 	margin: 20px;
 	margin-bottom: 10px;
 }
-.left-1 span{
+
+.left span{
 	display: inline-block;
 	margin-left: 10px;
 	font-size: 16px;
@@ -48,18 +44,14 @@ p{
 	padding-top: 10px;
 	padding-bottom: 20px;
 }
- 
+
+ /*电影海报*/
 .movie_image {
 	width: 30%;
 	height: 100px;
 	margin-top: 10px;
 }
 
-.img-2{
-	width: 100%;
-	height: 60%;
-	margin: 10% auto;
-}
 .movie_image_1{
 	width: 37%;
 	margin-top: 20px;
@@ -72,6 +64,7 @@ p{
 	margin-left: 10px;
 }
 
+/*列后清除浮动*/
 .content-details:after{
 	content: "";
 	display: table;
